--- a/solar-system/package.json
+++ b/solar-system/package.json
@@ -1,38 +1,23 @@
 {
   "private": true,
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@react-three/fiber": "^7.0.27",
     "dat.gui": "^0.7.7",
     "eslint-plugin-import": "^2.26.0",
+    "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-tinder-card": "^1.4.5",
     "three": "^0.134.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.5.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^3.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "lil-gui": "^0.15.0",
-    "mini-css-extract-plugin": "^2.4.3",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^3.3.1",
-    "three": "^0.134.0",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-merge": "^5.8.0"
+    "tailwindcss": "^2.2.4"
   }
 }
